// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValue has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <span
      class="form-text"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`KeyValue has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <label
      class="ddm-label"
      for="keyValue"
    >
      label
    </label>
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue has a predefined Value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        placeholder="Option 1"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value="value"
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue is not editable 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        disabled=""
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <label
      class="ddm-label"
      for="keyValue"
    >
      text
    </label>
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`KeyValue renders component with a key 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <div
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
    >
      <input
        aria-label="text"
        class="form-control ddm-field-text"
        id="keyValueLabelkeyValue"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-id
        :
      </label>
      <input
        class="key-value-input"
        tabindex="0"
        type="text"
        value="key"
      />
    </div>
  </div>
</div>
`;
